orderControllet getUser() method

--- a/microservices/order-service/src/main/resources/application.properties
+++ b/microservices/order-service/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # Nombre del microservicio (como se registrará en Eureka)
-spring.application.name=user-service
+spring.application.name=order-service
 
 # Puerto del microservicio
-server.port=8083
+server.port=8085
 
 # Logs
 logging.level.root=DEBUG
 
 # Configuración de base de datos (ajustar según tus credenciales reales)
-spring.datasource.url=jdbc:mysql://localhost:3306/userService_database
+spring.datasource.url=jdbc:mysql://localhost:3306/orderService_database
 spring.datasource.username=root
 spring.datasource.password=1324
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -21,3 +21,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Eureka Client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
+spring.cloud.compatibility-verifier.enabled=false
