--- a/microservices/wallet-service/src/main/resources/application.properties
+++ b/microservices/wallet-service/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # Nombre del microservicio (como se registrará en Eureka)
-spring.application.name=user-service
+spring.application.name=wallet-service
 
 # Puerto del microservicio
-server.port=8083
+server.port=8087
 
 # Logs
 logging.level.root=DEBUG
 
 # Configuración de base de datos (ajustar según tus credenciales reales)
-spring.datasource.url=jdbc:mysql://localhost:3306/userService_database
+spring.datasource.url=jdbc:mysql://localhost:3306/walletService_database
 spring.datasource.username=root
 spring.datasource.password=1324
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
