--- a/microservices/coin-service/src/main/resources/application.properties
+++ b/microservices/coin-service/src/main/resources/application.properties
@@ -2,11 +2,23 @@
 spring.application.name=coin-service
 
 # Puerto del microservicio
-server.port=8086
+server.port=8089
 
 # Logs
 logging.level.root=DEBUG
 
+# Configuración de base de datos
+spring.datasource.url=jdbc:mysql://localhost:3307/coin_service_database
+spring.datasource.username=root
+spring.datasource.password=1324
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 # Eureka Client
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
+spring.cloud.compatibility-verifier.enabled=false
