--- a/microservices/order-service/src/main/resources/application.properties
+++ b/microservices/order-service/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 spring.application.name=order-service
 
 # Puerto del microservicio
-server.port=8085
+server.port=8088
 
 # Logs
 logging.level.root=DEBUG
 
-# Configuración de base de datos (ajustar según tus credenciales reales)
-spring.datasource.url=jdbc:mysql://localhost:3306/orderService_database
+# Configuración de base de datos
+spring.datasource.url=jdbc:mysql://localhost:3307/order_service_database
 spring.datasource.username=root
 spring.datasource.password=1324
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
