--- a/microservices/order-service/src/main/resources/application.properties
+++ b/microservices/order-service/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.root=DEBUG
 # Configuración de base de datos
 spring.datasource.url=jdbc:mysql://localhost:3307/order_service_database
 spring.datasource.username=root
-spring.datasource.password=1324
+spring.datasource.password=manu
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración JPA
