--- a/microservices/paymentGateway-service/src/main/resources/application.properties
+++ b/microservices/paymentGateway-service/src/main/resources/application.properties
@@ -2,15 +2,15 @@
 spring.application.name=payment-gateway-service
 
 # puerto del microservicio
-server.port=8086
+server.port=8087
 
 # logs
 logging.level.root=DEBUG
 
 # configuracion de base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/paymentGateway_database
+spring.datasource.url=jdbc:mysql://localhost:3307/payment_gateway_database
 spring.datasource.username=root
-spring.datasource.password=1324
+spring.datasource.password=manu
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # configuracion JPA
@@ -24,3 +24,9 @@ eureka.instance.prefer-ip-address=true
 
 # desactivar verificación de compatibilidad de Spring Cloud si hay conflictos de versiones
 spring.cloud.compatibility-verifier.enabled=false
+
+stripe.api.key=stripe key
+
+razorpay.api.key=razorpay api key
+
+razorpay.api.secret=razorpay api secret
