--- a/microservices/wallet-service/src/main/resources/application.properties
+++ b/microservices/wallet-service/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-# Nombre del microservicio (como se registrará en Eureka)
+# Nombre del microservicio
 spring.application.name=wallet-service
 
 # Puerto del microservicio
-server.port=8087
+server.port=8085
 
 # Logs
 logging.level.root=DEBUG
 
-# Configuración de base de datos (ajustar según tus credenciales reales)
-spring.datasource.url=jdbc:mysql://localhost:3306/walletService_database
+# Configuración de base de datos
+spring.datasource.url=jdbc:mysql://localhost:3307/wallet_service_database
 spring.datasource.username=root
-spring.datasource.password=1324
+spring.datasource.password=manu
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración JPA
