--- a/microservice-eureka/src/main/resources/application.properties
+++ b/microservice-eureka/src/main/resources/application.properties
@@ -1,16 +1,20 @@
-server.port=8761
+# Nombre del microservicio
 spring.application.name=eureka-server
-spring.config.import=optional:configserver:http://localhost:8888
 
+# Puerto del servidor Eureka
+server.port=8761
+
+# No registrar este servidor Eureka en otro servidor
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-spring.security.user.name=admin
-spring.security.user.password=admin123
+# Desactivar toda la seguridad de Spring Security (Spring Boot 3.x+)
+spring.security.enabled=false
 
-# desactiva seguridad para endpoints de eureka
+# Desactivar seguridad básica en endpoints de Spring Boot Actuator (monitoring)
 spring.security.basic.enabled=false
 management.endpoints.web.exposure.include=*
 
-# apunta hacia el microservicio de eureka
-eureka.instance.client.server-url.defaultZone=http://localhost:${server.port}/eureka/
+# Este endpoint permite que otros microservicios se registren en esta URL
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spring.cloud.config.enabled=false
