--- a/microservice-gateway/src/main/resources/application.properties
+++ b/microservice-gateway/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=microservice-gateway
+server.port=8096
+
+# Sacamos admin:admin123@ porque ya no hay seguridad en Eureka Server
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.reactor.netty=DEBUG
+
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
