--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.manudev</groupId>
-        <artifactId>Trading</artifactId>
+        <artifactId>Crypto-App</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
@@ -65,20 +65,22 @@
             <version>${org.mapstruct.version}</version>
         </dependency>
 
-
         <!-- JWT -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
+            <version>${jjwt.version}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
+            <version>${jjwt.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
+            <version>${jjwt.version}</version>
             <scope>runtime</scope>
         </dependency>
 
