--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -7,17 +7,25 @@ server.port=8086
 # Logs
 logging.level.root=DEBUG
 
-# Configuracion de base de datos
+# Configuración de base de datos
 spring.datasource.url=jdbc:mysql://localhost:3307/user_service_database
+
+# Configuración de base de datos
 spring.datasource.username=root
 spring.datasource.password=manu
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuracion JPA
+# Configuración JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# JWT
+security.jwt.key.private=miclaveultrasecreta
+security.jwt.user.generator=trading-app
+security.jwt.expiration-in-ms=1800000
+
+# Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
