--- a/microservice-eureka/src/main/resources/application.properties
+++ b/microservice-eureka/src/main/resources/application.properties
@@ -1,20 +1,22 @@
-# Nombre del microservicio
 spring.application.name=eureka-server
 
 # Puerto del servidor Eureka
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.base-path=/actuator
 server.port=8761
 
 # No registrar este servidor Eureka en otro servidor
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
-# Desactivar toda la seguridad de Spring Security (Spring Boot 3.x+)
+# Desactivar toda la seguridad de Spring Security
 spring.security.enabled=false
 
-# Desactivar seguridad básica en endpoints de Spring Boot Actuator (monitoring)
+# Desactivar seguridad basica en endpoints de Spring Boot Actuator (monitoring)
 spring.security.basic.enabled=false
-management.endpoints.web.exposure.include=*
 
 # Este endpoint permite que otros microservicios se registren en esta URL
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.cloud.config.enabled=false
+
