--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,8 @@
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
 		<jjwt.version>0.11.5</jjwt.version>
 		<mysql-connector.version>8.0.33</mysql-connector.version>
+		<sonar.organization>manuzielinski</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
