--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -7,15 +7,15 @@ server.port=8086
 # Logs
 logging.level.root=DEBUG
 
-# Configuración de base de datos
+# Configuracion de base de datos
 spring.datasource.url=jdbc:mysql://localhost:3307/user_service_database
 
-# Configuración de base de datos
+# Configuracion de base de datos
 spring.datasource.username=root
 spring.datasource.password=manu
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuración JPA
+# Configuracion JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
