--- a/microservice-eureka/Dockerfile
+++ b/microservice-eureka/Dockerfile
@@ -1,25 +1,21 @@
-# Etapa 1: Build
-FROM maven:3.9.6-eclipse-temurin-17 as build
+# Etapa 1: Build del JAR con Maven
+FROM maven:3.9.6-eclipse-temurin-17 AS build
 
 WORKDIR /app
 
-# Copiar solo archivos necesarios
-COPY pom.xml .
-COPY src ./src
+COPY pom.xml ./
+COPY microservice-eureka ./microservice-eureka
 
-# Construir el JAR
-RUN mvn clean package -DskipTests
+# Compilamos el submódulo
+RUN mvn -f microservice-eureka/pom.xml clean package -DskipTests
 
-# Etapa 2: Imagen final con JDK
+# Etapa 2: Imagen final
 FROM eclipse-temurin:17-jdk-alpine
 
 WORKDIR /app
 
-# Copiar el JAR generado desde la etapa de build
-COPY --from=build /app/target/*.jar app.jar
+COPY --from=build /app/microservice-eureka/target/microservice-eureka-*.jar app.jar
 
-# Puerto que usará Eureka
 EXPOSE 8761
 
-# Comando de arranque
 ENTRYPOINT ["java", "-jar", "app.jar"]
